logs/audit_push_2026-01-08_ 7h44m24s.txt
======================== 
  File "D:\projetos-inovexa\mindscan\tools\..\auditar_mindscan.py", line 47
    json.dumps(entry, ensure_ascii=False) + "
                                            ^
SyntaxError: unterminated string literal (detected at line 47)

===========================================
Traceback (most recent call last):
  File "D:\projetos-inovexa\mindscan\tools\..\sincronizar_github.py", line 203, in <module>
    executar_pipeline()
  File "D:\projetos-inovexa\mindscan\tools\..\sincronizar_github.py", line 189, in executar_pipeline
    print("   \U0001f680 FULL ORCHESTRATOR – MindScan (Início)")
  File "C:\Program Files\Python312\Lib\encodings\cp1252.py", line 19, in encode
    return codecs.charmap_encode(input,self.errors,encoding_table)[0]
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
UnicodeEncodeError: 'charmap' codec can't encode character '\U0001f680' in position 3: character maps to <undefined>
Everything up-to-date
